--- a/gv-iot-demo-hue/pom.xml
+++ b/gv-iot-demo-hue/pom.xml
@@ -12,7 +12,18 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <cloud.nexus.content>http://mvn.greenvulcano.com/nexus/content</cloud.nexus.content>
   </properties>
+
+  <repositories>
+    <repository>
+      <id>gv-nexus-cloud</id>
+      <name>Cloud Nexus instance - </name>
+      <url>${cloud.nexus.content}/groups/public</url>
+      <snapshots><enabled>true</enabled></snapshots>
+      <releases><enabled>true</enabled></releases>
+    </repository>
+  </repositories>
 
   <dependencies>
     <dependency>
